# testcodex

./: CMakeLists.txt  README.md
dfir/: Invoke-DFIRCollection.ps1  README_DFIR.md  sample_output_tree.txt
src/: main.cpp  main.py
